--- a/Experiencia 1: Control de Procesos/Server_Modified_Front/InterfazGrafica/templates/index.html
+++ b/Experiencia 1: Control de Procesos/Server_Modified_Front/InterfazGrafica/templates/index.html
@@ -2,17 +2,10 @@
 
 {% block title %}Experiencia 1: Control de Procesos{% endblock %}
 
-{% block preamble %}
-<style>
-  @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
-  body {
-    font-family: 'Noto Sans', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    color: #0f244a;
-    background: #dfeaf5;
-  }
-</style>
+{% block postamble %}
+  <style>
+    {% include 'styles.css' %}
+  </style>
 {% endblock %}
 
 {% block contents %}
