--- a/Experiencia 1: Control de Procesos/Server_Modified_Front/InterfazGrafica/templates/styles.css
+++ b/Experiencia 1: Control de Procesos/Server_Modified_Front/InterfazGrafica/templates/styles.css
@@ -19,6 +19,13 @@ h1 {
     font-size: 1.8em;
     text-transform: uppercase;
 }
+h3 {
+    margin: 2em 0 0 0;
+    color: #2e484c;
+    font-family: 'Julius Sans One', sans-serif;
+    font-size: 1em;
+    text-transform: uppercase;
+}
 .container {
     width: 200px;
     height: 120px;
