Trying to add dropdown

--- a/Experiencia 1: Control de Procesos/Lolo/InterfazGrafica/templates/index.html
+++ b/Experiencia 1: Control de Procesos/Lolo/InterfazGrafica/templates/index.html
@@ -1,16 +1,16 @@
 {% extends base %}
 
-{% block title %}Experiencia 1: Control de Procesos{% endblock %}
-
 {% block postamble %}
   <style>
     {% include 'styles.css' %}
   </style>
 {% endblock %}
 
+{% block title %}Experiencia 1: Control de Procesos{% endblock %}
+
 {% block contents %}
   <div class="content">
-    <h1>Experiencia 1: Control de Procesos</h1>
+    <h1>Experiencia 1: Control de Procesos &#127758;</h1>
     <hr>
   </div>
   {{ super() }}
